subiendo algunos cambios

--- a/index.html
+++ b/index.html
@@ -23,8 +23,26 @@
         <h1>Originales Movie+ exclusivos</h1>
         <h3>Disfruta de peliculas,series y documentales nunca antes visto.Solo en Movie+</h3>
         <section>
-
+        <picture>
+            <img src="" alt="">
+        </picture>
+        <picture>
+            <img src="" alt="">
+        </picture>
+        <picture>
+            <img src="" alt="">
+        </picture>
+        <picture>
+            <img src="" alt="">
+        </picture>
+        <picture>
+            <img src="" alt="">
+        </picture>
+        <picture>
+            <img src="" alt="">
+        </picture>
         </section>
+
     </main>
     <footer>
 
