--- a/index.html
+++ b/index.html
@@ -1,52 +1,28 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="encabezado"> 
-        <picture  class="logo">
-
-            <img src="imagenes/movie.png" alt="logo de movie">
-        </picture>
-        <nav class="navegacion">
-            <ul class="nav-list">
-                <li>Pruebalo sin costo</li>
-                <li>Iniciar sesión</li>
-            </ul>
-        </nav>
+    <header>
+        <img src="/assets/icons/logo.svg" alt="logo">
+        <div class="header--title-container">
+            <h1>La próxima revolución en el intercambio de criptomonedas. </h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a href="" class="header--button">Conoce Nuestro Planes <span>i</span></a>
+        </div>
     </header>
     <main>
-        <h1>Originales Movie+ exclusivos</h1>
-        <h3>Disfruta de peliculas,series y documentales nunca antes visto.Solo en Movie+</h3>
-        <section>
-        <picture>
-            <img src="" alt="">
-        </picture>
-        <picture>
-            <img src="" alt="">
-        </picture>
-        <picture>
-            <img src="" alt="">
-        </picture>
-        <picture>
-            <img src="" alt="">
-        </picture>
-        <picture>
-            <img src="" alt="">
-        </picture>
-        <picture>
-            <img src="" alt="">
-        </picture>
-        </section>
-
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
     </main>
-    <footer>
-
-    </footer>
-    
+    <footer></footer>
 </body>
 </html>
