--- a/index.html
+++ b/index.html
@@ -31,25 +31,53 @@
                     <table>
                         <tr>
                             <td class="table__top-left">Bitcoin</td>
-                            <td class="table__top-right table__right">$ 1.96 <span></span></td>
+                            <td class="table__top-right table__right">$ 1.96 <span class="down"></span></td>
                         </tr>
                         <tr>
                             <td>Ethereum</td>
-                            <td class="table__right">$ 0.07<span></span></td>
+                            <td class="table__right">$ 0.07<span class="up"></span></td>
                         </tr>
                         <tr>
                             <td>Ripple</td>
-                            <td class="table__right">$ 2.15<span></span></td>
+                            <td class="table__right">$ 2.15<span class="down"></span></td>
                         </tr>
                         <tr>
                             <td class="table__bottom-left">Stellar</td>
-                            <td class="table__bottom-right table__right">$ 4.96<span></span></td>
+                            <td class="table__bottom-right table__right">$ 4.96<span class="down"></span></td>
                         </tr>
                     </table>
                 </div>
                 <div class="currency-table--date">
                     <p>
                         <bold>Actualizado:</bold> 19 Julio 23:45
+                    </p>
+                </div>
+            </div>
+            <div class="main-comision-table">
+                <p class="comision-table--title">Comisiones</p>
+                <div class="comision-table--container">
+                    <table>
+                        <tr>
+                            <td class="table__top-left">Bitrade</td>
+                            <td class="table__top-right table__right">$ 12.96 </td>
+                        </tr>
+                        <tr>
+                            <td>Bitpreco</td>
+                            <td class="table__right">$ 13.07</td>
+                        </tr>
+                        <tr>
+                            <td>Novadax</td>
+                            <td class="table__right">$ 13.15</span></td>
+                        </tr>
+                        <tr>
+                            <td class="table__bottom-left">Coinext</td>
+                            <td class="table__bottom-right table__right">$ 14.96</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="comision-table--date">
+                    <p>
+                        <bold>Actualizado:</bold> 19 Julio 23:48
                     </p>
                 </div>
             </div>
