--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="currency-table--date">
                     <p>
-                        <bold>Actualizado:</bold> 19 Julio 23:45
+                        <b>Actualizado:</b> 19 Julio 23:45
                     </p>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="comision-table--date">
                     <p>
-                        <bold>Actualizado:</bold> 19 Julio 23:48
+                        <b>Actualizado:</b> 19 Julio 23:48
                     </p>
                 </div>
             </div>
