Estrucutra base de la seccion de beneficios

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header--title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas. </h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="" class="header--button">Conoce Nuestro Planes <span></span></a>
+            <a href="#" class="header--button">Conoce Nuestro Planes <span></span></a>
         </div>
     </header>
     <main>
@@ -83,7 +83,33 @@
             </div>
         </section>
     </section>
-    <section></section>
+    <section class="main-product-detail">
+        <span></span>
+        <div>
+            <h2>Creamos un producto sin comparación.</h2>
+            <p>Confiable y diseñado para su uso diario.</p>
+        </div>
+        <section class="product-cards--container">
+            <article class="product-detail--card">
+                <span class="clock"></span>
+                <p class="product--card-title">Tiempo real</p>
+                <p class="product--card-body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+            </article>
+            <article>
+                <p></p>
+                <p></p>
+            </article>
+            <article>
+                <p></p>
+                <p></p>
+            </article>
+            <article>
+                <p></p>
+                <p></p>
+            </article>
+        </section>
+
+    </section>
     <section></section>
     <section></section>
     </main>
