--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
                 <p class="product--card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
             </article>
         </section>
-
     </section>
-    <section></section>
+    <section class="bitcoin-img-container">
+        <h2>Conócelo hoy.</h2>
+    </section>
     <section></section>
     </main>
     <footer></footer>
