--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header--title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas. </h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="#" class="header--button">Conoce Nuestro Planes <span></span></a>
+            <a href="#plans" class="header--button">Conoce Nuestro Planes <span></span></a>
         </div>
     </header>
     <main>
@@ -115,7 +115,24 @@
     <section class="bitcoin-img-container">
         <h2>Conócelo hoy.</h2>
     </section>
-    <section></section>
+    <section id="plans" class="main-plans-container">
+        <div class="plans--title">
+            <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+            <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+        </div>
+        <section class="plans-container--slider">
+         <article class="plans-container--card">
+            <p>Recomendado</p>
+            <h3>Pago Anual</h3>
+            <p><span>$</span>99</p>
+            <p>*Ahorras $129 comparado al plan mensual.</p>
+            <button>Escoger este <span></span></button>
+         </article>
+         <article></article>
+         <article></article>
+
+        </section>
+    </section>
     </main>
     <footer></footer>
 </body>
