aplicando estilos al boton

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="/assets/icons/logo.svg" alt="logo">
+        <img src="./assets/icons/logo.svg" alt="logo">
         <div class="header--title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas. </h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
