--- a/index.html
+++ b/index.html
@@ -130,9 +130,24 @@
                 <button class="plan-card--ca">Escoger este <span></span></button>
             </div>
          </article>
-         <article></article>
-         <article></article>
-
+         <article class="plans-container--trimestral">
+            <p class="plan-trimestral">Plan Trimestral</p>
+            <div class="plan-info-container">
+                <h3 class="plan-card--title__trimestral">Pago Trimestral</h3>
+                <p class="plan-card--price__trimestral"><span>$</span>59</p>
+                <p class="plan-card--saving">*Acceso a asesoria personalizada.</p>
+                <button class="plan-card--ca__trimestral">Escoger este <span></span></button>
+            </div>
+         </article>
+         <article class="plans-container--mensual">
+            <p class="plan-mensual">plan Mensual</p>
+            <div class="plan-info-container">
+                <h3 class="plan-card--title__mensual">Pago Mensual</h3>
+                <p class="plan-card--price__mensual"><span>$</span>19</p>
+                <p class="plan-card--saving__mensual">*Acceso limitado sin beneficios</p>
+                <button class="plan-card--ca__mensual">Escoger este <span></span></button>
+            </div>
+         </article>
         </section>
     </section>
     </main>
