--- a/index.html
+++ b/index.html
@@ -128,15 +128,19 @@
                 <p class="plan-card--price__trimestral"><span>$</span>59</p>
                 <p class="plan-card--saving">*Acceso a asesoria personalizada.</p>
                 <button class="plan-card--ca__trimestral">Escoger este <span></span></button>
+                <div class="icons"><span class="icons-left"></span></div>
             </div>
          </article>
+         
          <article class="plans-container--card">
+            <span class="icons left"></span></div>
             <p class="recomendado">Recomendado</p>
             <div class="plan-info-container">
                 <h3 class="plan-card--title">Pago Anual</h3>
                 <p class="plan-card--price"><span>$</span>99</p>
                 <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
                 <button class="plan-card--ca">Escoger este <span></span></button>
+                <span class="icons right"></span></div>
             </div>
          </article>
          <article class="plans-container--mensual">
