realizando el footer

--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
                 <div class="icons"><span class="icons-left"></span></div>
             </div>
          </article>
-         
          <article class="plans-container--card">
             <span class="icons left"></span></div>
             <p class="recomendado">Recomendado</p>
@@ -155,6 +154,23 @@
         </section>
     </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="section-left">
+            <ul>
+                <li>
+                    <a href="#">Linkedin</a>
+                </li>
+                <li>
+                    <a href="#">Crunchbase</a>
+                </li>
+                <li>
+                    <a href="#">Hackernews</a>
+                </li>
+            </ul>
+        </section class="section-right ">
+        <section>
+            <img src="./assets/icons/imagtipo.svg" alt=" logo de batata 2020">
+        </section>
+    </footer>
 </body>
 </html>
